se modifico html y se agrego funcion de calculo de precio

--- a/index.html
+++ b/index.html
@@ -1,13 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hola mundo</h1>
-    <script src="js/prueba.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>CocoWash</title>
+		<!-- Metas Seo -->
+		<meta name="description" content="Veni a la mejor lavanderia de ropa " />
+		<meta name="keywords" content=" lavado de ropa, lavanderia, lavar ropa" />
+		<meta name="author" content="Leandro Schlain" />
+		<!-- <link rel="shortcut icon" href="img/logo.png" /> -->
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<!-- Mi estilo -->
+		<link rel="stylesheet" href="css/main.css" />
+	</head>
+	<body>
+		<div class="container text-center">
+			<div class="row">
+				<div class="col">Alem 101 bahia Blanca</div>
+				<div class="col">Coco Wash</div>
+				<div class="col">2914500000</div>
+			</div>
+		</div>
+		<header>
+			<h1 class="marca">Bienvenido a lavaderos Coco Wash</h1>
+			<!-- Empieza Carousel --> 
+			<div
+				id="carouselExampleControls"
+				class="carousel slide"
+				data-bs-ride="carousel"
+			>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img
+							src="img/carrousel1.jpg"
+							class="d-block w-100"
+							alt="la primer imagen de carrusel contiene un perro siendo acariciado"
+						/>
+					</div>
+					<div class="carousel-item">
+						<img
+							src="img/carrousel2.jpg"
+							class="d-block w-100"
+							alt="La segunda imagen del carrusel contiene un perro Pug"
+						/>
+					</div>
+					<div class="carousel-item">
+						<img
+							src="img/carrousel3.jpg"
+							class="d-block w-100"
+							alt="La tercer imagen de carrusel contiene un perro Golden Retriever"
+						/>
+					</div>
+				</div>
+				<button
+					class="carousel-control-prev"
+					type="button"
+					data-bs-target="#carouselExampleControls"
+					data-bs-slide="prev"
+				>
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button
+					class="carousel-control-next"
+					type="button"
+					data-bs-target="#carouselExampleControls"
+					data-bs-slide="next"
+				>
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+			
+		</header>
+
+		<main>
+			<section>
+				<div class="container">
+					<div class="row mt-3">
+						<div class="col-md-6 col-lg-4">
+							<div class="bloque1">
+								<img src="img/washer.svg" alt="" />
+								<h3>Servicios de Lavanderia</h3>
+								<p>Disponemos del mejor servicio de lavanderia</p>
+							</div>
+						</div>
+						<div class="col-md-6 col-lg-4">
+							<div class="bloque2">
+								<img src="img/hanger.svg" alt="" />
+								<h3>Servicios de Planchado</h3>
+								<p>Planchamos trajes y prendas difíciles</p>
+							</div>
+						</div>
+						<div class="col-md-6 col-lg-4">
+							<div class="bloque3">
+								<img src="img/vacuum.svg" alt="" />
+								<h3>Servicios de Limpieza de alfombras</h3>
+								<p>Limpiamos las alfombras para que parezcan nuevas</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section>
+				<h2 class="mt-5 mb-5">Somos unos apasionados de la lavanderia</h2>
+				<p class="mt-5">
+					Somos un grupo de profesionales de la lavanderia que nos mantenemos a la
+					vanguardia de las nuevas tecnologías, metodos de limpieza y soluciones
+					para lidiar con telas delicadas. Mantenemos los mas altos estandares
+					siguiendo regulaciones provinciales y nacionales. Ademas somos
+					ecologicos por lo que gastamos menos agua que la competencia.
+				</p>
+			</section>
+
+			<h2 class="mt-5 mb-5">¿Como funciona?</h2>
+
+			<div class="container-fluid text-center bg-gris">
+				<div class="row">
+					<div class="col">
+						<img src="img/img_icon_01.png" alt="" />
+						<h3>Paso 1</h3>
+						<p>Junta toda tu ropa sucia</p>
+					</div>
+					<div class="col">
+						<img src="img/img_icon_02.png" alt="" />
+						<h3>Paso 2</h3>
+						<p>Buscamos tu ropa</p>
+					</div>
+					<div class="col">
+						<img src="img/img_icon_03.png" alt="" />
+						<h3>Paso 3</h3>
+						<p>Limpiamos tu ropa</p>
+					</div>
+					<div class="col">
+						<img src="img/img_icon_04.png" alt="" />
+						<h3>Paso 4</h3>
+						<p>te llevamos tu ropa doblada, planchada y limpia</p>
+					</div>
+				</div>
+			</div>
+
+			<h2 class="mt-5 mb-5">Nuestros clientes comerciales incluyen</h2>
+
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<ul>
+							<li>Salones y Spas</li>
+							<li>Hoteles</li>
+							<li>Masajistas</li>
+							<li>Equipos de futbol</li>
+						</ul>
+					</div>
+					<div class="col">
+						<ul>
+							<li>Personas particulares</li>
+							<li>Hospitales</li>
+							<li>rganizaciones religiosas</li>
+							<li>Gimnasios</li>
+						</ul>
+					</div>
+					<div class="col">
+						<ul>
+							<li>Resturantes</li>
+							<li>Barberias</li>
+							<li>peluquerías</li>
+							<li>Veterinarias</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<h2 class="mt-5 mb-5">Tenemos precios Economicos</h2>
+		</main>
+
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/calculo.js"></script> 
+	</body>
 </html>
