se crearon nuevas funciones

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Veni a la mejor lavanderia de ropa " />
 		<meta name="keywords" content=" lavado de ropa, lavanderia, lavar ropa" />
 		<meta name="author" content="Leandro Schlain" />
-		<!-- <link rel="shortcut icon" href="img/logo.png" /> -->
+		<link rel="shortcut icon" href="img/favicon.png" />
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<!-- Mi estilo -->
