--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@
 
 		<main>
 			<section>
+				<div class="container mt-3 mb-3" id="pedido">
+					<h2>Realice su pedido</h2>
+				</div>
+			</section>
+
+			<section>
+				<div class="container" id="carrito">
+					<!-- <p>Su pedido es:</p>
+					<ul>
+						<li>3 pantalones</li>
+						<li>2 buzos</li>
+						<li>1 remera</li>
+					</ul>
+					<p>Es costo total asciende a $3000</p> -->
+				</div>
+			</section>
+
+			<section>
 				<div class="container">
 					<div class="row mt-3">
 						<div class="col-md-6 col-lg-4">
