avances en el trabajo con dom

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<main>
 			<section>
 				<div class="container mt-3 mb-3" id="pedido">
-					<h2>Realice su pedido</h2>
+					<a href="pedido.html">Relice su Pedido</a>
 				</div>
 			</section>
 
@@ -133,6 +133,10 @@
 					ecologicos por lo que gastamos menos agua que la competencia.
 				</p>
 			</section>
+
+			<div class="container mt-3 mb-3" id="pedido">
+				<a href="pedido.html">Relice su Pedido</a>
+			</div>
 
 			<h2 class="mt-5 mb-5">¿Como funciona?</h2>
 
@@ -192,10 +196,11 @@
 				</div>
 			</div>
 
-			<h2 class="mt-5 mb-5">Tenemos precios Economicos</h2>
+			<div class="container mt-3 mb-3" id="pedido">
+				<a href="pedido.html">Relice su Pedido</a>
+			</div>
 		</main>
 
 		<script src="js/bootstrap.min.js"></script>
-		<script src="js/calculo.js"></script> 
 	</body>
 </html>
