se agrego Dom a la pagina pedido

--- a/pedido.html
+++ b/pedido.html
@@ -101,7 +101,7 @@
 
                 <div class="text-center">
                     <button type="reset" class="btn btn-lg bg-amarillo">Cancelar</button>
-                    <button type="submit" class="btn btn-lg bg-amarillo" id="submit" onclick="datosDelForm()">Enviar</button>
+                    <button type="submit" class="btn btn-lg bg-amarillo" id="submit" onclick="datosDelForm(event)">Enviar</button>
                 </div>
             </form>
             <div id="carrito">
