se realizo correcciones de escritura

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<main>
 			<section>
 				<div class="container mt-3 mb-3" id="pedido">
-					<a href="pedido.html">Relice su Pedido</a>
+					<a href="pedido.html">Realice su Pedido</a>
 				</div>
 			</section>
 
@@ -135,7 +135,7 @@
 			</section>
 
 			<div class="container mt-3 mb-3" id="pedido">
-				<a href="pedido.html">Relice su Pedido</a>
+				<a href="pedido.html">Realice su Pedido</a>
 			</div>
 
 			<h2 class="mt-5 mb-5">¿Como funciona?</h2>
@@ -197,7 +197,7 @@
 			</div>
 
 			<div class="container mt-3 mb-3" id="pedido">
-				<a href="pedido.html">Relice su Pedido</a>
+				<a href="pedido.html">Realice su Pedido</a>
 			</div>
 		</main>
 
