se utilizo libreria Luxon

--- a/pedido.html
+++ b/pedido.html
@@ -173,5 +173,6 @@
 		</main>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/calculo.js"></script>
+		<script src="js/luxon.min.js"></script>
 	</body>
 </html>
