--- a/pedido.html
+++ b/pedido.html
@@ -174,5 +174,6 @@
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/calculo.js"></script>
 		<script src="js/luxon.min.js"></script>
+		<script src="js/sweetalert2.all.min.js"></script>
 	</body>
 </html>
