--- a/pedido.html
+++ b/pedido.html
@@ -32,7 +32,7 @@
 				<!-- Modal content -->
 				<div class="modal-content">
 					<span class="close">&times;</span>
-					<p>Some text in the Modal..</p>
+					<p>Aguardando información...</p>
 				</div>
 			</div>
 
