se realizaron arreglos menores

--- a/index.html
+++ b/index.html
@@ -85,13 +85,7 @@
 
 			<section>
 				<div class="container" id="carrito">
-					<!-- <p>Su pedido es:</p>
-					<ul>
-						<li>3 pantalones</li>
-						<li>2 buzos</li>
-						<li>1 remera</li>
-					</ul>
-					<p>Es costo total asciende a $3000</p> -->
+					
 				</div>
 			</section>
 
@@ -160,7 +154,7 @@
 					<div class="col">
 						<img src="img/img_icon_04.png" alt="" />
 						<h3>Paso 4</h3>
-						<p>te llevamos tu ropa doblada, planchada y limpia</p>
+						<p>Te llevamos tu ropa doblada, planchada y limpia</p>
 					</div>
 				</div>
 			</div>
@@ -181,7 +175,7 @@
 						<ul>
 							<li>Personas particulares</li>
 							<li>Hospitales</li>
-							<li>rganizaciones religiosas</li>
+							<li>Organizaciones religiosas</li>
 							<li>Gimnasios</li>
 						</ul>
 					</div>
